Change Bag structure from an "ArrayList of ArrayLists" to an "ArrayList of LinkedLists"
Fix a typo in CompositionalRules.